# simple-socks5-proxy

./: Cargo.toml  README.md
simple-socks5-proxy/: Cargo.toml
simple-socks5-proxy-core/: Cargo.toml
simple-socks5-proxy-core/src/: lib.rs  socks5.rs
simple-socks5-proxy-core/src/transport/: mod.rs  ssh.rs
simple-socks5-proxy/src/: main.rs
