[package]
name = "simple-socks5-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
log ={ workspace = true }
tokio = { version = "1", features = ["full"] }
simple-socks5-proxy-core = { path = "../simple-socks5-proxy-core" }
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
